# dataverse_tests

./: .env.sample  .gitignore  .gitmodules  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  Jenkinsfile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env  setup.cfg  setup.py  tox.ini  user_01.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-template.md  feature-template.md  issue-template.md
configs/aussda_production/testing/default/system/: installation-config_form-data_create-dataverse.json  test-config_dataverses.json  test-config_search.json
configs/default/dataverse-docker_5-2-cvm/: form-data_create-dataverse.json  xpaths.json
configs/default/dataverse_4-18-1/: xpaths.json
configs/default/dataverse_4-20/: xpaths.json
configs/default/dataverse_5-2/: form-data_create-dataset.json  terms-of-use.html  xpaths.json
configs/default/dataverse_5-6/: xpaths.json
configs/default/dataverse_5-7/: xpaths.json
configs/installations/aussda_dv02/utils/: create_testdata_01.json
configs/installations/aussda_production/testing/: settings.json
configs/installations/aussda_production/utils/: create_testdata_01.json  create_testdata_02.json
configs/installations/iqss_development/utils/: create_testdata_01.json
configs/installations/localhost_docker/testing/: settings.json
configs/installations/localhost_docker/utils/: create_testdata_01.json  create_testdata_02.json  create_testdata_dev.json
configs/localhost_docker/utils/: create_testdata_01.json
configs/utils/: create_testdata_01.json  create_testdata_02.json  create_testdata_03.json  create_testdata_04.json  create_user_01.json
env-config/: example.env  sample.env
jenkins_private/: .env.dataverse_production
requirements/: common.txt  development.txt  lint.txt
src/: debug.py
src/dvtests/: __init__.py  __main__.py  config.py  settings.py
src/dvtests/testing/: __init__.py  conftest.py  test_api.py  test_datasets.py  test_homepage.py  test_resources.py
src/dvtests/testing/custom/: conftest.py
src/dvtests/testing/dataverse/: suite_basic.py  test_datafiles.py  test_dataverses.py  test_user_authentication.py
src/dvtests/testing/default/: conftest.py  test_all-datafiles.py  test_all-datasets.py  test_all-dataverses.py  test_api.py  test_authentication.py  test_create-frontend_dataverse.py  test_datafiles.py  test_datasets.py  test_dataverses.py  test_installation.py  test_login-normal.py  test_login.py  test_oaipmh.py  test_registration.py  test_robots_txt.py  test_search.py  test_shibboleth.py  test_sitemap.py  test_user.py
src/dvtests/testing/default/end2end/: test_datafiles.py  (+2 more)
src/dvtests/testing/website/: test_resources.py
src/dvtests/utils/: __init__.py
src/dvtests/utils/configs/: create_testdata_01.json
testing/: config.py  conftest.py
testing/dataverse/: suite_data.py  test_sitemap.py
tests/: config.py  conftest.py  utils.py
tests/data/: datafiles.json  datasets.json  dataverse_test-upload.json  dataverses.json  metadata.json
tests/data/instances/dataverse_dv03/: test-config.json  test-data.json
tests/data/instances/dataverse_dv05/: test-config.json
tests/data/instances/dataverse_localhost_t550/: test-data.json
tests/data/instances/dataverse_production/: test-config.json  test-data.json
tests/data/instances/website/: test-data.json
tests/dataverse/: data.json  suite_basic.py  suite_data.py  test_api.py  test_datafiles.py  test_datasets.py  test_dataverses.py  test_homepage.py  test_metadata_server.py  test_resources.py  test_robots_txt.py  test_search.py  test_sitemap.py  test_user_authentication.py  test_user_profile.py
tests/dataverse_production/: data.json  test_api.py  test_datafiles.py  test_dataverses.py  test_homepage_navigate_about.py  test_metadata_server.py  test_robots_txt.py  test_search.py  test_sitemap.py  test_uris.py
tests/website/: data.json  test_resources.py  test_uris.py
user/: example.json  sample.json
utils/: __main__.py  config.py  create_data.py  remove_data.py  utils.py
vars/: .env.sample
(+74 files in other folders)
