[metadata]
license_files = LICENSE.txt

[tool:pytest]
testpaths = tests
addopts = -v
markers =
    v4_18_1: mark test as working for Dataverse v4.18.1
    v4_20: mark test as working for Dataverse v4.20
    v5_2: mark test as working for Dataverse v5.2
    utils: mark test which need utils generated data to be executed
    selenium: mark test as using selenium frontend testing
    smoke: mark test as smoke tests

[flake8]
max-line-length = 88
ignore = E129,E203,E501,W503,S101
exclude =
    .egg

[pylint]
max-line-length = 88

[mypy]
ignore_missing_imports = True
