[metadata]
name = dvtests
version = attr: dvtests.__version__
author = Stefan Kasberger
author_email = mail@stefankasberger.at
url = https://github.com/gdcc/dataverse_tests
description = Dataverse tests
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
keywords = dataverse, testing, selenium, pyDataverse
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English

[options]
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    dvtests = src.dvtests.main:app

[tool:pytest]
testpaths = tests
addopts = -v
markers =
    v4_18_1: mark test as working for Dataverse v4.18.1
    v4_20: mark test as working for Dataverse v4.20
    v5_2: mark test as working for Dataverse v5.2
    v5_6: mark test as working for Dataverse v5.6
    v5_7: mark test as working for Dataverse v5.7
    utils: mark test which need utils generated data to be executed
    selenium: mark test as using selenium frontend testing
    smoke: mark test as smoke tests

[flake8]
max-line-length = 88
ignore = E129,E203,E501,W503,S101
exclude =
    .egg

[pylint]
max-line-length = 88

[mypy]
ignore_missing_imports = True
